--- a/cqrs_app/templates/base.jinja2
+++ b/cqrs_app/templates/base.jinja2
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="container">
-            <header><h1>Generic Social Network</h1></header>
+            <header><h1><a href="/">Generic Social Network</a></h1></header>
 
             {% block body %}{% endblock %}
         </div>
